--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -225,8 +225,8 @@
           <clipPath id="a"><path fill="#fff" d="M0 0h982v239H0z" /></clipPath>
         </defs>
       </svg>
-      <h1>Hello, {{ title }}</h1>
-      <p>Congratulations! Your app is running. 🎉</p>
+      <h1>Hello, LK {{ title }}</h1>
+      <p>Angular 19, Tailwind ESlint, Prettier. 🎉</p>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
@@ -334,3 +334,8 @@
 
 
 <router-outlet />
+<div class="grid place-items-center h-screen">
+  <button class="py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-red-400">
+    Tailwind
+  </button>
+</div>
