--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -335,7 +335,7 @@
 
 <router-outlet />
 <div class="grid place-items-center h-screen">
-  <button class="py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-red-400">
-    Tailwind
+  <button class="py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-purple-600">
+    Styled with Tailwind
   </button>
 </div>
